# Prometheus

./: .gitignore  HIKVISION_usb_cam_calib.yaml  README.md
Modules/common/prometheus_msgs/: CMakeLists.txt
Modules/common/prometheus_msgs/msg/: UAVCommand.msg  YawRateInfo.msg
Modules/ego_planner_swarm/plan_manage/launch_ego_planner/: sitl_ego_planner_basic.launch
Modules/ego_planner_swarm/plan_manage/src/: ego_replan_fsm.cpp  ego_traj_to_cmd.cpp
Modules/ego_planner_swarm/plan_manage/src_for_prometheus/: ego_goal_pub.cpp  traj_server_for_prometheus.cpp
Modules/motion_planning/local_planner/launch/: sitl_apf_with_local_point.launch
Modules/object_detection/: CMakeLists.txt  package.xml
Modules/object_detection/cpp_nodes/: kcf_tracker.cpp  web_cam.cpp
Modules/object_detection/launch/: ms_coco_det.launch
Modules/object_detection/py_nodes/yolov5_tensorrt_client/: yolov5_tensorrt_client.py
Modules/object_detection/src/darknet_ros/config/: ros.yaml
Modules/object_detection/src/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
Modules/object_detection/src/darknet_ros/src/: YoloObjectDetector.cpp
Modules/object_detection/src/kcf_tracker_lib/: kcftracker.cpp
Modules/object_detection_yolov5tensorrt/: CMakeLists.txt  detect.py  gen_wts.py  requirements.txt  train.py  utils.h  yololayer.cu  yololayer.h  yolov5.cpp  yolov5_trt.py  yolov5_trt_ros.py  yolov5_trt_webcam.py  yolov5_trt_webcam_mot.py
Modules/object_detection_yolov5tensorrt/data/: hyp.scratch.yaml
Modules/object_detection_yolov5tensorrt/data/ABCLab_members/: data.yaml
Modules/object_detection_yolov5tensorrt/data/ABCLab_members/labels/: train.cache
Modules/object_detection_yolov5tensorrt/data/ABCLab_members/labels/train/: T_20220818152415_700.txt  T_20220818152416_066.txt  T_20220818152416_433.txt  T_20220818152417_166.txt  T_20220818152418_633.txt  T_20220818152419_366.txt  T_20220818152419_733.txt  T_20220818152420_099.txt  T_20220818152420_833.txt  T_20220818152421_199.txt  T_20220818152421_933.txt  T_20220818152423_033.txt  T_20220818152423_399.txt  T_20220818152424_499.txt  T_20220818152424_866.txt  T_20220818152425_600.txt  T_20220818152427_433.txt  T_20220818152427_800.txt  T_20220818152428_533.txt  T_20220818152428_900.txt  T_20220818152429_633.txt  T_20220818152430_733.txt  T_20220818152431_466.txt  T_20220818152432_200.txt  T_20220818152432_566.txt  T_20220818152432_933.txt  T_20220818152436_233.txt  T_20220818152436_966.txt  T_20220818152437_333.txt  T_20220818152437_699.txt  T_20220818152438_066.txt  T_20220818152438_433.txt  T_20220818152439_166.txt  T_20220818152440_266.txt  T_20220818152440_633.txt  T_20220818152440_999.txt  T_20220818152441_366.txt  T_20220818152442_099.txt  T_20220818152442_466.txt  T_20220818152442_833.txt  (+231 more)
Modules/object_detection_yolov5tensorrt/data/hzw/: data.yaml
Modules/object_detection_yolov5tensorrt/data/hzw/labels/: train.cache
Modules/object_detection_yolov5tensorrt/data/hzw/labels/train/: T_20220818152415_333.txt  T_20220818152416_799.txt  T_20220818152417_533.txt  T_20220818152417_900.txt  T_20220818152418_266.txt  T_20220818152419_000.txt  T_20220818152420_466.txt  T_20220818152421_566.txt  T_20220818152422_299.txt  T_20220818152422_666.txt  T_20220818152423_766.txt  T_20220818152424_133.txt  T_20220818152425_966.txt  T_20220818152426_333.txt  T_20220818152427_066.txt  T_20220818152428_166.txt  T_20220818152429_266.txt  T_20220818152430_000.txt  T_20220818152430_366.txt  T_20220818152431_100.txt  T_20220818152431_833.txt  T_20220818152433_300.txt  T_20220818152433_666.txt  T_20220818152434_033.txt  T_20220818152434_400.txt  T_20220818152434_766.txt  T_20220818152435_133.txt  (+66 more)
Modules/object_detection_yolov5tensorrt/deepsort/: __init__.py
Modules/object_detection_yolov5tensorrt/deepsort/deep/: evaluate.py  feature_extractor.py  model.py  original_model.py  test.py  train.py
Modules/object_detection_yolov5tensorrt/my_train_results/hzw/exp0/: events.out.tfevents.1660881848.ABCLab-Ubuntu20.3752.0  opt.yaml  results.txt
Modules/object_detection_yolov5tensorrt/runs/exp0/: events.out.tfevents.1660887144.ABCLab-Ubuntu20.6726.0  opt.yaml
Modules/object_detection_yolov5tensorrt/runs/exp1/: events.out.tfevents.1660887201.ABCLab-Ubuntu20.7231.0
Modules/object_detection_yolov5tensorrt/runs/exp2/: events.out.tfevents.1660887289.ABCLab-Ubuntu20.8530.0  opt.yaml
Modules/object_detection_yolov5tensorrt/runs/exp3/: events.out.tfevents.1660887356.ABCLab-Ubuntu20.9279.0  opt.yaml  results.txt
Modules/object_detection_yolov5tensorrt/weights/: download_weights.sh
Modules/simulator_utils/: CMakeLists.txt
Modules/simulator_utils/launch/: map_generator.rviz
Modules/simulator_utils/map_generator/: map_generator_node.cpp
Modules/tutorial_demo/advanced/siamrpn_track/src/: siamrpn_track.cpp
Modules/tutorial_demo/advanced/yolov5_track/launch/: yolov5_track_all.launch
Modules/uav_control/include/: uav_controller.h
Modules/uav_control/src/: uav_controller.cpp
Scripts/my_scripts/: test.sh
Scripts/simulation/motion_planning/: apf_with_local_pcl.sh
Simulator/gazebo_simulator/gazebo_models/uav_models/p450_monocular/: my_p450_monocular.sdf  p450_monocular.sdf
Simulator/gazebo_simulator/gazebo_worlds/planning_worlds/: planning_test.world  planning_test2.world
Simulator/gazebo_simulator/launch_basic/: sitl_px4_indoor.launch  sitl_px4_indoor_test.launch
merge_yolo_and_egoplan/: a.launch  actor.world  detect.launch  map_generator.launch  p450_odom_cam.sdf  run.sh  sitl_ego_planner_basic.launch  sitl_px4_indoor.launch  test.sdf  uav_control_main_indoor.launch
merge_yolo_and_egoplan/src/gazebo_extra_plugins/scripts/: keyboard_actor_pyqt.py
merge_yolo_and_egoplan/src/position_translater/: CMakeLists.txt  package.xml
merge_yolo_and_egoplan/src/position_translater/src/: yolo5_bridge_ego_plan.cpp
merge_yolo_and_egoplan/src/position_transpoter/: CMakeLists.txt  package.xml
merge_yolo_and_egoplan/src/position_transpoter/launch/: position_transpoter.launch
merge_yolo_and_egoplan/src/position_transpoter/src/: yolo5_bridge_ego_plan.cpp
